--- a/style.css
+++ b/style.css
@@ -2,26 +2,28 @@
 @font-face {
     font-family: "liberator-heavy";
     src:
-      url("./fonts/liberator-siroko-heavy.woff2") format("woff2"),
-      url('./fonts/LiberatorSIROKO-Heavy.ttf') format('truetype');
+        url("./fonts/liberator-siroko-heavy.woff2") format("woff2"),
+        url('./fonts/LiberatorSIROKO-Heavy.ttf') format('truetype');
 }
 
 @font-face {
     font-family: "Inconsolata";
     src:
-      url('./fonts/inconsolata.ttf') format('truetype');
+        url("./fonts/inconsolata.woff2") format("woff2"),
+        url('./fonts/inconsolata.ttf') format('truetype');
 }
 
 @font-face {
     font-family: "Inter";
     src:
-      url('./fonts/inter.ttf') format('truetype');
+        url("./fonts/inter.woff2") format("woff2"),
+        url('./fonts/inter.ttf') format('truetype');
 }
 
 @font-face {
     font-family: "Material Icons";
     src:
-      url('./fonts/MaterialIcons-Regular.ttf') format('truetype');
+        url('./fonts/MaterialIcons-Regular.ttf') format('truetype');
 }
 
 .liberator-heavy{
@@ -90,7 +92,7 @@ body{
     flex-direction: column;
     justify-content: space-between;
     margin: 0;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 .header{
